<resources>
    <string name="app_name">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="get_start">Get Start</string>
    <string name="txt_enter_mob_no">Enter Mobile Number</string>
    <string name="confirmation">We will send you an <b> One Time Password </b>to this mobile number</string>
    <string name="verify">Verify</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="search">Search</string>
    <string name="send_code">Send Code</string>
    <string name="verification">OTP Verification</string>
    <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="otp_image">otpImage</string>
    <string name="message">Message</string>
    <string name="user_image">User_Image</string>
    <string name="send">send</string>
    <string name="chat">Chat</string>
    <string name="last_message">last message</string>
    <string name="name">Name</string>
    <string name="message_notification_title">New Message</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="photo">photo</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="userName">UserName</string>
    <string name="Username">Username</string>
    <string name="p_1">This user name and picture will be visible to</string>
    <string name="p2"> your Chat users.Other users can find</string>
    <string name="p3"> you through their contacts</string>


</resources>