<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user_info.UserInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_75sdp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_margin="0dp"
            android:background="@color/gray"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:fontFamily="@font/font_semi"
        android:hint="@string/Username"
        android:textColor="@color/black"
        android:textSize="@dimen/_17ssp"
        android:backgroundTint="#b5b5b5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_image" />

    <TextView
        android:id="@+id/tv_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/font_semi"
        android:text="@string/p_1"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_userName" />

    <TextView
        android:id="@+id/tv_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_semi"
        android:text="@string/p2"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/tv_p1"
        app:layout_constraintStart_toStartOf="@+id/tv_p1"
        app:layout_constraintTop_toBottomOf="@id/tv_p1" />
    <TextView
        android:id="@+id/tv_p3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_semi"
        android:text="@string/p3"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/tv_p2"
        app:layout_constraintStart_toStartOf="@+id/tv_p2"
        app:layout_constraintTop_toBottomOf="@id/tv_p2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:tint="@android:color/white"

        android:src="@drawable/baseline_navigate_next_24"
        />
</androidx.constraintlayout.widget.ConstraintLayout>