<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/view_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_chat_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp"

                    style="@style/CustomCardCorners"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline2">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/font_semi"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/tv_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="start"
        android:text="@string/confirmation"
        android:fontFamily="@font/font_rg"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        />
    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/txt_enter_mob_no"
        app:layout_constraintTop_toBottomOf="@id/tv_confirmation"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        android:fontFamily="@font/font_rg"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="@id/tv_mobile"
        app:layout_constraintTop_toBottomOf="@id/tv_mobile"
        android:background="@drawable/shape_edit_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:drawableEndCompat="@drawable/ic_arrow_down"
            android:fontFamily="@font/font_semi"
            android:gravity="center"
            android:padding="6dp"
            android:id="@+id/txt_country_code"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_mobile"
            android:background="@android:color/transparent"
            android:fontFamily="@font/font_semi"
            android:inputType="number"
            android:padding="10dp"

            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
       android:id="@+id/btn_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:layout_marginTop="@dimen/_60sdp"
        app:cornerRadius="@dimen/_10sdp"
        android:fontFamily="@font/font_semi"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        android:padding="@dimen/_8sdp"

        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/layout"
        app:layout_constraintStart_toStartOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@id/layout" />
</androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.32" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
